--- a/designer/index.html
+++ b/designer/index.html
@@ -170,31 +170,78 @@ Accent Light (Fallback): #FFD180
           <div class="page-content">
             <div class="mdl-cell mdl-cell--12-col">
               <div class="mdl-card mdl-shadow--2dp mdl-card__supporting-text">
-                <div class="mdl-shadow--4dp lesson-types">
-                  <a data-lesson="whichoneoftheseis" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>Which one of these is?</span>
-                  </a>
-                  <a data-lesson="howdoyousay" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>How do you say?</span>
-                  </a>
-                  <a data-lesson="howdoyousaytyping" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>How do you say {typing}?</span>
-                  </a>
-                  <a data-lesson="whatwassaid" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>What was said?</span>
-                  </a>
-                  <a data-lesson="whatwassaidtyping" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>What was said {typing}?</span>
-                  </a>
-                  <a data-lesson="selectthemissingword" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                    <img src="../imgs/group.svg">
-                    <span>Select the missing word?</span>
-                  </a>
+                <div class="mdl-shadow--4dp">
+                  <div class="lesson-types">
+                    <a data-lesson="whichoneoftheseis" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>Which one of these is?</span>
+                    </a>
+                    <a data-lesson="howdoyousay" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>How do you say?</span>
+                    </a>
+                    <a data-lesson="howdoyousaytyping" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>How do you say {typing}?</span>
+                    </a>
+                    <a data-lesson="whatwassaid" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>What was said?</span>
+                    </a>
+                    <a data-lesson="whatwassaidtyping" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>What was said {typing}?</span>
+                    </a>
+                    <a data-lesson="selectthemissingword" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                      <img src="../imgs/group.svg">
+                      <span>Select the missing word?</span>
+                    </a>
+                  </div>
+                </div>
+                <div>
+                  <h3>Question Type: "<span data-output="questiontype">How do you say?</span>"</h3>
+                  <div data-output="lesson">
+                    <form class="mdl-cell--6-col ib">
+                      <div class="mdl-textfield mdl-js-textfield">
+                          <input class="mdl-textfield__input" type="text" placeholder="Arabic word:" id="arbword">
+                          <label class="mdl-textfield__label" for="arbword">Text...</label>
+                      </div>
+                    </form>
+                    <form class="mdl-cell--6-col ib">
+                      <div class="mdl-textfield mdl-js-textfield">
+                          <input class="mdl-textfield__input" type="text" placeholder="English translation:" id="engtrans">
+                          <label class="mdl-textfield__label" for="engtrans">Text...</label>
+                      </div>
+                    </form>
+                    <div>
+                      <form class="mdl-cell--6-col ib">
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" placeholder="Correct answer:" id="correctanswer">
+                            <label class="mdl-textfield__label" for="correctanswer">Text...</label>
+                        </div>
+                      </form>
+                      <form class="mdl-cell--6-col ib">
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" placeholder="Wrong answer:" id="wronganswer1">
+                            <label class="mdl-textfield__label" for="wronganswer1">Text...</label>
+                        </div>
+                      </form>
+                    </div>
+                    <div>
+                      <form class="mdl-cell--6-col ib">
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" placeholder="Wrong answer:" id="wronganswer2">
+                            <label class="mdl-textfield__label" for="wronganswer2">Text...</label>
+                        </div>
+                      </form>
+                      <form class="mdl-cell--6-col ib">
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" placeholder="Wrong answer:" id="wronganswer3">
+                            <label class="mdl-textfield__label" for="wronganswer3">Text...</label>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
