added designer to app page and can now see chats and lessons all in 1 page

--- a/app.html
+++ b/app.html
@@ -69,6 +69,20 @@
           <div class="uk-card-badge uk-label">Tool</div>
           <div class="uk-grid-small uk-flex-middle" uk-grid>
             <div class="uk-width-auto">
+              <img class="uk-border-circle" width="40" height="40" src="imgs/design.png">
+            </div>
+            <div class="uk-width-expand">
+              <h3 class="uk-card-title uk-margin-remove-bottom">Designer</h3>
+            </div>
+          </div>
+          <p>Design your own lesson and share it with the world!</p>
+        </a>
+      </div>
+      <div>
+        <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="editor/" target="_blank">
+          <div class="uk-card-badge uk-label">Tool</div>
+          <div class="uk-grid-small uk-flex-middle" uk-grid>
+            <div class="uk-width-auto">
               <img class="uk-border-circle" width="40" height="40" src="imgs/tool.svg">
             </div>
             <div class="uk-width-expand">
@@ -78,6 +92,9 @@
           <p>Build your own chat session and share it with the world!</p>
         </a>
       </div>
+    </div>
+    <hr class="uk-divider-icon">
+    <div class="uk-child-width-1-0@s uk-grid-match" uk-grid>
       <div>
         <div uk-toggle="target: #arabengochats" class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" data-open="arabengochats">
           <div class="uk-card-badge uk-label">Community</div>
@@ -89,7 +106,7 @@
               <h3 class="uk-card-title uk-margin-remove-bottom">Community Builds!</h3>
             </div>
           </div>
-          <p>Interact with chats made by the ArabEngo community!</p>
+          <p>Interact with lessons & chats made by the ArabEngo community!</p>
         </div>
       </div>
     </div>
