--- a/community.html
+++ b/community.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <a class="twitter-timeline"  href="https://twitter.com/hashtag/ArabEngoChat" data-widget-id="882009962024775680">#ArabEngoChat Tweets</a>
+    <a class="twitter-timeline"  href="https://twitter.com/hashtag/ArabEngo" data-widget-id="886559730314956800">#ArabEngo Tweets</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </body>
 </html>
