--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         
         <div class="uk-navbar-right">
           <ul class="uk-navbar-nav">
-            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Contribute</a></li>
+            <li class="uk-navbar-item">
+              <a href="designer/" target="_blank">Designer</a>
+            </li>
             <li class="uk-navbar-item">
               <a class="pointer">Donate</a>
               <div class="uk-navbar-dropdown">
