--- a/app.html
+++ b/app.html
@@ -65,7 +65,7 @@
     <hr class="uk-divider-icon">
     <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
       <div>
-        <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="editor/" target="_blank">
+        <a class="pointer uk-card uk-card-default uk-card-hover uk-card-body uk-width-1-@m" href="designer/" target="_blank">
           <div class="uk-card-badge uk-label">Tool</div>
           <div class="uk-grid-small uk-flex-middle" uk-grid>
             <div class="uk-width-auto">
