--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         <div class="uk-navbar-right">
           <ul class="uk-navbar-nav">
             <li class="uk-navbar-item">
-              <a href="designer/" target="_blank">Designer</a>
+              <a class="pointer">Contribute</a>
+              <div class="uk-navbar-dropdown">
+                <ul class="uk-nav uk-navbar-dropdown-nav">
+                  <li><a href="designer/" target="_blank">Design a lesson</a></li>
+                  <li><a href="editor/" target="_blank">Build a chat</a></li>
+                </ul>
+              </div>
             </li>
             <li class="uk-navbar-item">
               <a class="pointer">Donate</a>
@@ -74,15 +80,20 @@
         </h3>
 
         <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
-          <li class="uk-parent"><a href="#">Contribute</a></li>
-          <li class="uk-parent"><a href="#">Fork</a>
+          <li class="uk-parent">
+            <a href="#">Contribute</a>
+            <ul class="uk-nav-sub">
+              <li><a href="designer/" target="_blank">Design a lesson</a></li>
+              <li><a href="editor/" target="_blank">Build a chat</a></li>
+            </ul>
+          <li class="uk-parent"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Fork</a></li>
           <li class="uk-parent">
             <a href="#">Donate</a>
             <ul class="uk-nav-sub">
-              <li><a href="#">Donate via PayPal</a></li>
-              <li><a href="#">Donate via SquareCash</a></li>
+              <li><a href="https://www.paypal.me/mikethedj4" target="_blank">Donate via PayPal</a></li>
+              <li><a href="https://cash.me/$mschwar4" target="_blank">Donate via SquareCash</a></li>
             </ul>
-          </li></li>
+          </li>
         </ul>
       </div>
     </div>
