--- a/designer/index.html
+++ b/designer/index.html
@@ -461,7 +461,7 @@ Accent Light (Fallback): #FFD180
                     <textarea class="lessonpage"></textarea>
                     <form action="#" class="mdl-cell--6-col ib">
                       <div class="mdl-textfield mdl-js-textfield">
-                        <input class="mdl-textfield__input" type="text" placeholder="Arabic word:" data-word="arbword" value="مرحبا">
+                        <input class="mdl-textfield__input" type="text" placeholder="Arabic word:" data-word="arbword" value="بنت">
                       </div>
                     </form>
                     <div>
