--- a/designer/index.html
+++ b/designer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"  content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta name="theme-color" content="#009688">
     <!-- Material Design Lite -->
-    <link rel="stylesheet" href="../css/material.min.css">
+    <link rel="stylesheet" href="../libraries/mdl/material.min.css">
     <link rel="stylesheet" href="../css/lessons.css">
     <link rel="stylesheet" href="../css/designer.css">
     <link rel="stylesheet" href="../libraries/alertifyjs/css/alertify.min.css">
@@ -14,7 +14,7 @@
     <script src="../libraries/jquery/jquery.js"></script>
     <script src="../libraries/jquery/jquery-migrate-1.2.1.min.js"></script>
     <!-- Material Design Lite -->
-    <script src="../js/material.min.js"></script>
+    <script src="../libraries/mdl/material.min.js"></script>
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:500,400,300,100&amp;subset=latin,latin-ext'>
