--- a/designer/index.html
+++ b/designer/index.html
@@ -4,20 +4,33 @@
     <title>ArabEngo: Lesson Designer</title>
     <meta name="viewport"  content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta name="theme-color" content="#009688">
-    <!-- Material Design Lite -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../libraries/mdl/material.min.css">
     <link rel="stylesheet" href="../css/lessons.css">
     <link rel="stylesheet" href="../css/designer.css">
     <link rel="stylesheet" href="../libraries/alertifyjs/css/alertify.min.css">
     <link rel="stylesheet" href="../libraries/alertifyjs/css/themes/default.min.css">
-    <script src="../libraries/alertifyjs/alertify.min.js"></script>
-    <script src="../libraries/jquery/jquery.js"></script>
-    <script src="../libraries/jquery/jquery-migrate-1.2.1.min.js"></script>
-    <!-- Material Design Lite -->
-    <script src="../libraries/mdl/material.min.js"></script>
+    <link rel="stylesheet" href="../libraries/fancybox/css/core.css" />
+    <link rel="stylesheet" href="../libraries/fancybox/css/fullscreen.css" />
+    <link rel="stylesheet" href="../libraries/fancybox/css/slideshow.css" />
+    <link rel="stylesheet" href="../libraries/fancybox/css/thumbs.css" />
+    <link rel="stylesheet" href="../libraries/fancybox/css/jquery.fancybox.min.css" />
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:500,400,300,100&amp;subset=latin,latin-ext'>
+    
+    <!-- Javascript -->
+    <script src="../libraries/alertifyjs/alertify.min.js"></script>
+    <script src="../libraries/jquery/jquery.js"></script>
+    <script src="../libraries/jquery/jquery-migrate-1.2.1.min.js"></script>
+    <script src="../libraries/mdl/material.min.js"></script>
+    <script src="../libraries/fancybox/js/core.js"></script>
+    <script src="../libraries/fancybox/js/fullscreen.js"></script>
+    <script src="../libraries/fancybox/js/guestures.js"></script>
+    <script src="../libraries/fancybox/js/media.js"></script>
+    <script src="../libraries/fancybox/js/slideshow.js"></script>
+    <script src="../libraries/fancybox/js/thumbs.js"></script>
+    <script src="../libraries/fancybox/js/jquery.fancybox.min.js"></script>
     <!--
 Colors
 (picked from http://sankk.in/material-mixer/, following http://www.google.com/design/spec/style/color.html)
@@ -61,11 +74,11 @@ Accent Light (Fallback): #FFD180
           
           <!-- Top right button nav dropdown -->
           <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="demo-menu-lower-right">
-            <li class="mdl-menu__item comingsoon">
+            <li class="mdl-menu__item" data-play="howto">
               <i class="material-icons">play_arrow</i>
-                <span>
-                  How to make a lesson
-                </span>
+              <span>
+                How to make a lesson
+              </span>
             </li>
             <a href="http://get.speaky.com/JwBt/yphmXkXOPE" target="_blank">
               <li class="mdl-menu__item">
