--- a/app.html
+++ b/app.html
@@ -249,11 +249,11 @@
             
             <a class="pointer" href="https://cash.me/$mschwar4" target="_blank">
               <span class="skill" style="background-color: transparent!important; background-image: url(imgs/square_cash.svg); background-size: 77%;"></span>
-              <p>Donate via SquareCash</p>
+              <p>Donate</p>
             </a>
-            <a class="pointer" href="https://www.paypal.me/mikethedj4" target="_blank">
-              <span class="skill" style="background-color: transparent!important; background-image: url(imgs/paypal.svg); background-size: 74%;"></span>
-              <p>Donate via PayPal</p>
+            <a class="pointer" href="https://mikethedj4.github.io/store/" target="_blank">
+              <span class="skill" style="background-color: transparent!important; background-image: url(imgs/retail-icon.svg); background-size: 90%;"></span>
+              <p>Store</p>
             </a>
             
             <div class="add-a-skill">
