--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </ul>
               </div>
             </li>
+            <li class="uk-navbar-item"><a href="http://mikethedj4.github.io/store/" target="_blank">Store</a></li>
             <li class="uk-navbar-item">
               <a class="pointer">Donate</a>
               <div class="uk-navbar-dropdown">
