Added store link

--- a/designer/index.html
+++ b/designer/index.html
@@ -143,6 +143,9 @@ Accent Light (Fallback): #FFD180
           <a class="mdl-navigation__link mdl-js-button mdl-js-ripple-effect" data-action="save-gist">
             <i class="material-icons" role="presentation">share</i> &nbsp; Share
           </a>
+          <a class="mdl-navigation__link mdl-js-button mdl-js-ripple-effect" href="http://mikethedj4.github.io/store/" target="_blank">
+            <i class="material-icons" role="presentation">store</i> &nbsp; Store
+          </a>
           <a class="mdl-navigation__link mdl-js-button mdl-js-ripple-effect" data-open="donate">
             <i class="material-icons" role="presentation">favorite</i> &nbsp; Donate
           </a>
