updated squarecash link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="uk-navbar-dropdown">
                 <ul class="uk-nav uk-navbar-dropdown-nav">
                   <li><a href="https://www.paypal.me/mikethedj4" target="_blank">Donate via PayPal</a></li>
-                  <li><a href="https://cash.me/$mschwar4" target="_blank">Donate via SquareCash</a></li>
+                  <li><a href="https://cash.me/$michaelsboost" target="_blank">Donate via SquareCash</a></li>
                 </ul>
               </div>
             </li>
@@ -92,7 +92,7 @@
             <a href="#">Donate</a>
             <ul class="uk-nav-sub">
               <li><a href="https://www.paypal.me/mikethedj4" target="_blank">Donate via PayPal</a></li>
-              <li><a href="https://cash.me/$mschwar4" target="_blank">Donate via SquareCash</a></li>
+              <li><a href="https://cash.me/$michaelsboost" target="_blank">Donate via SquareCash</a></li>
             </ul>
           </li>
         </ul>
