--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -198,7 +198,7 @@
           <p>This is a beginner sample chat made by <a href="http://mikethedj4.github.io/">Michael Schwartz</a>.</p> <p>Enjoy!</p>
           
           <div class="donatebtns">
-            <a href="https://cash.me/$mschwar4" target="_blank">
+            <a href="https://cash.me/$michaelsboost" target="_blank">
               <img src="../imgs/square_cash.svg" alt="Donate via SquareCash">
             </a>
             <a href="https://www.paypal.me/mikethedj4" target="_blank">
