--- a/app.html
+++ b/app.html
@@ -247,7 +247,7 @@
               </a>
             </div>
             
-            <a class="pointer" href="https://cash.me/$mschwar4" target="_blank">
+            <a class="pointer" href="https://cash.me/$michaelsboost" target="_blank">
               <span class="skill" style="background-color: transparent!important; background-image: url(imgs/square_cash.svg); background-size: 77%;"></span>
               <p>Donate</p>
             </a>
