--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
               </div>
             </li>
-            <li class="uk-navbar-item"><a href="http://mikethedj4.github.io/store/" target="_blank">Store</a></li>
+            <li class="uk-navbar-item"><a href="http://michaelsboost.github.io/store/" target="_blank">Store</a></li>
             <li class="uk-navbar-item">
               <a class="pointer">Donate</a>
               <div class="uk-navbar-dropdown">
@@ -49,7 +49,7 @@
                 </ul>
               </div>
             </li>
-            <li class="uk-navbar-item"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Fork</a></li>
+            <li class="uk-navbar-item"><a href="https://github.com/michaelsboost/ArabEngo/" target="_blank">Fork</a></li>
             <li class="uk-navbar-item"><button class="uk-button uk-button-default" onclick="window.location.href = 'app.html';">Launch</button></li>
           </ul>
         </div>
@@ -87,7 +87,7 @@
               <li><a href="designer/" target="_blank">Design a lesson</a></li>
               <li><a href="editor/" target="_blank">Build a chat</a></li>
             </ul>
-          <li class="uk-parent"><a href="https://github.com/mikethedj4/ArabEngo/" target="_blank">Fork</a></li>
+          <li class="uk-parent"><a href="https://github.com/michaelsboost/ArabEngo/" target="_blank">Fork</a></li>
           <li class="uk-parent">
             <a href="#">Donate</a>
             <ul class="uk-nav-sub">
