--- a/designer/index.html
+++ b/designer/index.html
@@ -1022,19 +1022,19 @@ Accent Light (Fallback): #FFD180
               <h4 class="tl nomar" style="color: #888888;">Edit:</h4>
               <input class="txtbox block" data-output="editLesson">
 
-              <a class="share-facebook" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//mikethedj4.github.io/kodeWeave/editor/%23c8f226c5e20b774806f507a06be12fee">
+              <a class="share-facebook" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//michaelsboost.github.io/ArabEngo/editor/%23c8f226c5e20b774806f507a06be12fee">
                 <i class="fa fa-facebook-square"></i>
               </a>
-              <a class="share-twitter" target="_blank" href="https://twitter.com/home?status=Checkout%20my%20site%20title%20%23weave%20on%20%23kodeWeave%20%23kodeWeaveShare%20-%20https%3A//mikethedj4.github.io/kodeWeave/e/%23c8f226c5e20b774806f507a06be12fee">
+              <a class="share-twitter" target="_blank" href="https://twitter.com/home?status=Checkout%20my%20chat%20on%20%23ArabEngo%20-%20https%3A//michaelsboost.github.io/ArabEngo/e/%23c8f226c5e20b774806f507a06be12fee">
                 <i class="fa fa-twitter-square"></i>
               </a>
-              <a class="share-gplus" target="_blank" href="https://plus.google.com/share?url=https%3A//mikethedj4.github.io/kodeWeave/editor/%23c8f226c5e20b774806f507a06be12fee">
+              <a class="share-gplus" target="_blank" href="https://plus.google.com/share?url=https%3A//michaelsboost.github.io/ArabEngo/editor/%23c8f226c5e20b774806f507a06be12fee">
                 <i class="fa fa-google-plus-square"></i>
               </a>
               <a class="share-instagram" target="_blank">
                 <i class="fa fa-instagram"></i>
               </a>
-              <a target="_blank" href="https://cash.me/$mschwar4">
+              <a target="_blank" href="https://cash.me/$michaelsboost">
                 <i class="fa fa-credit-card"></i>
               </a>
               <a target="_blank" href="https://paypal.me/mikethedj4">
