--- a/designer/index.html
+++ b/designer/index.html
@@ -1031,8 +1031,8 @@ Accent Light (Fallback): #FFD180
               <a class="share-gplus" target="_blank" href="https://plus.google.com/share?url=https%3A//michaelsboost.github.io/ArabEngo/editor/%23c8f226c5e20b774806f507a06be12fee">
                 <i class="fa fa-google-plus-square"></i>
               </a>
-              <a class="share-instagram" target="_blank">
-                <i class="fa fa-instagram"></i>
+              <a class="share-linkedin-square" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
               </a>
               <a target="_blank" href="https://cash.me/$michaelsboost">
                 <i class="fa fa-credit-card"></i>
