--- a/editor/index.html
+++ b/editor/index.html
@@ -433,8 +433,8 @@
               <a class="share-gplus" target="_blank" href="https://plus.google.com/share?url=https%3A//mikethedj4.github.io/kodeWeave/editor/%23c8f226c5e20b774806f507a06be12fee">
                 <i class="fa fa-google-plus-square"></i>
               </a>
-              <a class="share-instagram" target="_blank">
-                <i class="fa fa-instagram"></i>
+              <a class="share-linkedin-square" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
               </a>
               <a target="_blank" href="https://cash.me/$mschwar4">
                 <i class="fa fa-credit-card"></i>
