--- a/app.html
+++ b/app.html
@@ -251,7 +251,7 @@
               <span class="skill" style="background-color: transparent!important; background-image: url(imgs/square_cash.svg); background-size: 77%;"></span>
               <p>Donate</p>
             </a>
-            <a class="pointer" href="https://mikethedj4.github.io/store/" target="_blank">
+            <a class="pointer" href="https://michaelsboost.github.io/store/" target="_blank">
               <span class="skill" style="background-color: transparent!important; background-image: url(imgs/retail-icon.svg); background-size: 90%;"></span>
               <p>Store</p>
             </a>
